# vercode

./: Cargo.toml  README.md
.github/workflows/: rust.yml
vercode/: Cargo.toml
vercode-macros/: Cargo.toml
vercode-macros/src/: lib.rs
vercode/benches/: vercode_bench.rs
vercode/src/: lib.rs
vercode/tests/: array_tests.rs  basic_tests.rs  collection_tests.rs  enum_tests.rs  error_tests.rs  network_tests.rs  no_default_test.rs  option_tests.rs  primitive_tests.rs  string_tests.rs  transparent_tests.rs  versioning_tests.rs
