[workspace]

members = [
    "vercode",
    "vercode-macros",
]

resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[profile.release]
debug = true

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
vercode-macros = { path = "vercode-macros", version = "0.5.0" }

# dev dependencies
bincode = "1"
criterion = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
