[package]
name = "vercode-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
#homepage.workspace = true
#repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true